fix spacing and font size

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -401,7 +401,7 @@ pre {
   margin-right: 0;
   margin-top: 0;
   margin-bottom: 1.45rem;
-  font-size: 0.85rem;
+  font-size: 0.95rem;
   line-height: 1.42;
   background: hsla(0, 0%, 0%, 0.04);
   border-radius: 3px;
@@ -540,15 +540,15 @@ li > p {
   margin-bottom: calc(1.45rem / 2);
 }
 code {
-  font-size: 0.85rem;
+  font-size: 0.95rem;
   line-height: 1.45rem;
 }
 kbd {
-  font-size: 0.85rem;
+  font-size: 0.95rem;
   line-height: 1.45rem;
 }
 samp {
-  font-size: 0.85rem;
+  font-size: 0.95rem;
   line-height: 1.45rem;
 }
 abbr {
