--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,7 +10,7 @@
 
 .page-links {
     margin-top: 3rem;
-    padding-top: 4rem;
+    padding-top: 2rem;
     font-family: "Raleway";
 }
 
