--- a/src/components/tags/tags.css
+++ b/src/components/tags/tags.css
@@ -7,5 +7,5 @@ h4 {
     border-radius: 0%;
     border-color: transparent;
     font-family: "Raleway";
-    font-size: .85rem;
+    font-size: .95rem;
 }
